加入了中文名

--- a/index.htm
+++ b/index.htm
@@ -953,7 +953,7 @@ ul
 
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
-<p class=MsoNormal><span lang=EN-US>My CV</span></p>
+<p class=MsoNormal><span lang=EN-US>My CV ÐÜÂ×ÇÇ</span></p>
 
 <p class=MsoNormal><span lang=EN-US>Name: <span class=SpellE>lqxiong</span></span></p>
 
